# vlr-predictor

./: .gitignore  ADVANCED_PREDICTIONS.md  DEMO.md  README.md  demo_advanced_predictions.py  demo_vlrgg_integration.py  fix_all_issues.py  fix_asymmetry_bug.py  pyproject.toml  requirements.txt  run.sh  test_live_system.py  train_and_predict.py
app/: advanced_predictor.py  config.py  enhanced_predictor.py  features.py  live_data_cache.py  live_realistic_predictor.py  logging_utils.py  main.py  predictor.py  realistic_predictor.py  simple_predictor.py  strength_of_schedule_predictor.py  symmetric_predictor.py  upstream.py
app/routers/: __init__.py  advanced_predictions.py  dashboard.py  matches.py  predictions.py
artifacts/: enhanced_model_info.json  masters_2025_model_info.json  metrics.csv
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  advanced_predictor.py  config.py  features.py  live_data_cache.py  live_realistic_predictor.py  main.py  models.py  realistic_predictor.py  simple_predictor.py  summarizer.py  team_mapping.py  vlrgg_integration.py
backend/artifacts/: MODEL_INFO.json
backend/data/: map_matches_365d.csv  masters_toronto_2025_validation.csv  real_vlrgg_data.csv  tier1_masters_2025.csv  vct_2025_matches.csv  vct_realistic_matches.csv
backend/tests/: __init__.py
data/: live_cache.db  map_matches_365d.csv  masters_2025_complete.csv  masters_bangkok_2025_training.csv  vct_2025_teams.json  vct_team_mapping.json
docs/: model_card.md
frontend/: .rscinfo  README.md  [root-of-the-server]__0f0ba101._.css  [root-of-the-server]__0f0ba101._.css.map  [root-of-the-server]__3937fb70._.js  [root-of-the-server]__3937fb70._.js.map  [root-of-the-server]__4f504785._.js  [root-of-the-server]__4f504785._.js.map  [root-of-the-server]__70a73b34._.js.map  [root-of-the-server]__84cb5a90._.js  [root-of-the-server]__84cb5a90._.js.map  [root-of-the-server]__8678845a._.js.map  [root-of-the-server]__a8ab9a0d._.js.map  [root-of-the-server]__a9fea3fa._.js  [root-of-the-server]__a9fea3fa._.js.map  [root-of-the-server]__b1a2d45f._.js  [root-of-the-server]__b1a2d45f._.js.map  [root-of-the-server]__bfc28432._.js  [root-of-the-server]__bfc28432._.js.map  [root-of-the-server]__d2f212f0._.js  [root-of-the-server]__d2f212f0._.js.map  [root-of-the-server]__da043809._.js  [root-of-the-server]__da043809._.js.map  [root-of-the-server]__e83dd02a._.js  [root-of-the-server]__e83dd02a._.js.map  [root-of-the-server]__f547b805._.js.map  _6cebbb7c._.js  _6cebbb7c._.js.map  app-build-manifest.json  demo.html  index.html  next-font-manifest.js  next-font-manifest.json  node_modules_0b53a5be._.js.map  node_modules_56974a2a._.js.map  node_modules_5f2d4120._.js.map  node_modules_6ae5d471._.js.map  node_modules_79928b8b._.js.map  node_modules_@swc_helpers_cjs_b3dc30d6._.js.map  node_modules_be471754._.js  (+65 more)
misc/docs/: model_card.md  report.md
misc/reports/: final-pipeline-report.md  report-1-masters-validation-analysis.md  report-2-leakage-fix.md  report-3-historical-only.md  report-4-final-analysis.md  report-5-realistic-model.md  report-6-data-leakage-fix-summary.md
misc/scripts/: add_sample_data.py  build_features.py  collect_masters_2025_data.py  collect_real_data.py  collect_vct_2025_data.py  create_vct_match_data.py  demo_vlrgg_integration.py  eval.py  fix_all_issues.py  fix_asymmetry_bug.py  fix_data_generation.py  fix_data_leakage.py  fix_model_inversion.py  force_vct_teams.py  proper_masters_validation.py  start_frontend.sh  test_live_system.py  train.py  train_realistic_model.py  (+2 more)
notebooks/: README.md
reports/: README.md  old-masters_2025_validation_report.md  old-validation_report.md  old-vct_365_training_report.md  report-8-production-fixes-and-vct-integration.md
scripts/: add_sample_data.py  build_features.py  collect_real_data.py  collect_tier1_data.py  collect_vct_2025_data.py  eval.py  retrain_symmetric_model.py  rigorous_validation.py  train.py  train_validate_masters_2025.py  truly_fix_leakage.py  vct_365_training_pipeline.py
tests/: test_endpoints.py  test_features.py  test_predictor.py
website/: DASHBOARD_README.md
(+16 files in other folders)
